<?xml version="1.0" encoding="UTF-8"?>

<!--
Copyright (C) 2024, 2025, Yasumasa Suenaga

This file is part of nativebinder.

nativebinder is free software: you can redistribute it and/or modify
it under the terms of the GNU Lesser General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

nativebinder is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU Lesser General Public License for more details.

You should have received a copy of the GNU Lesser General Public License
along with nativebinder. If not, see <http://www.gnu.org/licenses/>.
-->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.yasuenag</groupId>
    <artifactId>nativebinder</artifactId>
    <name>NativeBinder</name>

    <scm>
        <connection>scm:git:git://github.com/YaSuenag/nativebinder.git</connection>
        <developerConnection>scm:git:ssh://github.com:YaSuenag/nativebinder.git</developerConnection>
        <url>https://github.com/YaSuenag/nativebinder</url>
    </scm>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>22</maven.compiler.source>
        <maven.compiler.target>22</maven.compiler.target>
    </properties>

    <version>0.4.0-SNAPSHOT</version>

    <repositories>
        <repository>
            <id>github</id>
            <url>https://maven.pkg.github.com/YaSuenag/ffmasm</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>com.yasuenag</groupId>
            <artifactId>ffmasm</artifactId>
            <version>0.6.1</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.11.4</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <compilerArgs>
                        <arg>-Xlint:all</arg>
                    </compilerArgs>
                    <debug>true</debug>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.11.2</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.2</version>
                <configuration>
                    <jvm>${java.home}/bin/java</jvm>
                    <argLine>--enable-native-access=ALL-UNNAMED</argLine>
                    <argLine>--enable-native-access=com.yasuenag.ffmasm,com.yasuenag.nativebinder</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub Packages</name>
            <url>https://maven.pkg.github.com/YaSuenag/nativebinder</url>
        </repository>
    </distributionManagement>
</project>
